[package]
name = "fono-overlay"
description = "Minimal floating recording-indicator overlay for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

# Frame-budget microbenchmark for the Glass Cortex renderer (plan
# Task 2.6). Dev-only; never ships in the binary.
[[example]]
name = "cortex_frame_bench"
required-features = ["backend-x11"]

# Offline visual gallery: renders every Synapse Lattice phase to PPM
# frames for look iteration. Dev-only; never ships in the binary.
[[example]]
name = "cortex_gallery"
required-features = ["backend-x11"]

[features]
# Default build is the slim, no-graphics-deps headless stub. The
# desktop daemon ships with `real-window` enabled (which in turn
# enables every available backend); the static / server build keeps
# the default for minimal binary size + no display-server deps.
default = []

# Real overlay surface(s). Pulls the renderer module + every
# graphical backend. Each backend can also be enabled independently,
# e.g. for size-budget experiments that drop one of them.
real-window = [
    "dep:ab_glyph",
    "backend-x11",
    "backend-wlr",
    "backend-macos",
    "backend-windows",
]

# X11 + winit + softbuffer backend (the original carryover path).
# Linux X11 sessions only; on Wayland-only hosts the runtime probe
# falls through to the wlr / xdg backends.
backend-x11 = ["dep:winit", "dep:softbuffer", "dep:ab_glyph", "dep:libloading"]

# wlr-layer-shell backend (sway, hyprland, river, KDE, COSMIC,
# Wayfire, niri, labwc). On Wayland sessions without layer-shell
# (notably GNOME / Mutter) selection falls through to `backend-x11`
# via Xwayland; there is no native xdg_toplevel fallback because
# `xdg_toplevel` cannot deliver a usable panel UX on Mutter
# (placement is compositor-chosen, surface appears in Alt+Tab).
backend-wlr = [
    "dep:ab_glyph",
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-protocols",
    "dep:wayland-protocols-wlr",
    "dep:rustix",
]

# Native macOS NSPanel backend (macOS port plan Phase 8): a
# non-activating, click-through, always-on-top borderless panel
# software-blitted from the shared renderer framebuffer via
# NSBitmapImageRep. AppKit is main-thread-only, so the backend ships
# render jobs to the process-wide main-thread pump that `fono::main`
# installs on macOS (see `backends::macos::set_main_thread_dispatcher`).
# The objc2 crates are declared in a darwin-only target table below;
# the `dep:` entries are no-ops off-target, so enabling `real-window`
# on Linux still compiles without them.
backend-macos = [
    "dep:ab_glyph",
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
]

# Native Windows overlay backend (Windows port plan Phase 10): a
# borderless, non-activating, click-through, always-on-top layered
# tool-window fed by `UpdateLayeredWindow` from the shared renderer's
# premultiplied ARGB framebuffer (softbuffer's GDI blit can't carry
# per-pixel alpha, so the plan's softbuffer sketch is superseded — see
# `backends/windows.rs`). `windows-sys` is declared in a Windows-only
# target table below; the `dep:` entry is a no-op off-target, so
# enabling `real-window` on Linux / macOS still compiles without it.
backend-windows = ["dep:ab_glyph", "dep:windows-sys"]

[dependencies]
fono-core = { path = "../fono-core" }
tracing = { workspace = true }
# ab_glyph drives software glyph rendering for the renderer; required
# by every backend that actually paints pixels (every backend except
# noop).
ab_glyph = { version = "0.2", optional = true }

# The graphical backends are Linux display-server stacks (X11 via
# winit/softbuffer, Wayland via smithay/wayland-*). They are declared
# in a Linux-only target table so enabling `real-window` on macOS /
# Windows compiles the crate without them (resolver v2 skips features
# of target-inactive optional deps); the backend modules and the
# `try_spawn` dispatch are cfg-gated to match. Native macOS / Windows
# overlay backends are separate follow-ups (see the Windows port plan
# Phase 10 and the macOS port plan).
[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }
# Wayland-native backends. Pinned to SCTK 0.19 to match what winit
# 0.30 already brings in transitively — keeps the lockfile graph
# unified. wayland-protocols-wlr is direct only behind backend-wlr.
smithay-client-toolkit = { version = "0.19", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", optional = true, features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", optional = true, features = ["client"] }
# rustix is used by the Wayland backends to poll() the wayland socket
# fd with a timeout so the command-channel drain and the wayland
# event dispatch share a single thread without busy-waiting. Already
# in the lockfile via every transitive consumer (calloop, polling,
# tempfile, …) so we pay no fresh dep tree.
rustix = { version = "0.38", default-features = false, features = ["event", "std"], optional = true }
# libloading is used by the X11 backend to preflight `libxkbcommon-x11.so.0`
# before winit's event loop dlopens it; on systems without the package
# (notably Ubuntu 26.04 GNOME-Wayland defaults, which ship only the core
# `libxkbcommon.so.0`) winit/xkbcommon-dl panics the overlay thread. We
# catch the missing-library case ourselves and return `NotAvailable` so
# the backend selector falls through cleanly with an actionable message.
# Already in the dep graph via winit's transitive `ash`/wgpu paths.
libloading = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# NSPanel overlay backend (macOS port plan Phase 8). All three crates
# are already in Cargo.lock at these exact versions via fono-tray's
# NSStatusItem renderer and fono-inject's focus prober — no
# new-to-project crates, zero Linux cost (target tables do not unify
# off-target).
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", default-features = false, optional = true, features = [
    "std",
    "objc2-core-foundation",
    "NSBitmapImageRep",
    "NSColor",
    "NSControl",
    "NSGraphics",
    "NSImage",
    "NSImageRep",
    "NSImageView",
    "NSPanel",
    "NSResponder",
    "NSScreen",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, optional = true, features = [
    "std",
    "NSGeometry",
    "NSObjCRuntime",
    "NSString",
    "NSThread",
] }

[target.'cfg(target_os = "windows")'.dependencies]
# Layered tool-window overlay backend (Windows port plan Phase 10).
# Already in Cargo.lock at this exact version via fono-tray's tray
# icon, fono-inject's focus prober, and cpal — no new-to-project
# crate, zero Linux cost (target tables do not unify off-target).
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
