[package]
name = "fono-polish"
description = "Text formatting via LLMs: trait and local + cloud backends for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["cerebras", "openai-compat"]
cerebras = ["dep:reqwest", "dep:fono-http"]
openai-compat = ["dep:reqwest", "dep:fono-http"]
anthropic = ["dep:reqwest", "dep:fono-http"]
llama-local = ["dep:llama-cpp-2", "dep:encoding_rs", "dep:sha2", "dep:hex", "fono-core/llama-local"]
# Hardware acceleration features — forward to llama-cpp-2 / its sys
# crate. Off by default; same opt-in story as `fono-stt`'s `accel-*`.
# Both crates' ggml is statically linked together (deduped at link
# time), so flipping these flags lights up the corresponding kernels
# for both STT and LLM in lockstep.
accel-cuda = ["llama-local", "llama-cpp-2/cuda"]
accel-metal = ["llama-local", "llama-cpp-2/metal"]
accel-vulkan = ["llama-local", "llama-cpp-2/vulkan"]
accel-rocm = ["llama-local", "llama-cpp-2/rocm"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
whatlang = { workspace = true }
reqwest = { workspace = true, optional = true }
fono-http = { path = "../fono-http", optional = true }
llama-cpp-2 = { workspace = true, optional = true }
# Pulled in transitively by llama-cpp-2; declared explicitly so the
# token-to-piece UTF-8 decoder lands inside our llama_local module.
encoding_rs = { version = "0.8", optional = true }
# Prompt-state cache key hashing (F7 prefix cache); only with llama-local.
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
