[package]
name = "fono-stt"
description = "Speech-to-text trait and local + cloud backends for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["groq", "wyoming"]
# Cloud backends — each behind a feature flag per Phase 4 Task 4.3.
groq = ["dep:reqwest", "dep:fono-http"]
openai = ["dep:reqwest", "dep:fono-http"]
# OpenRouter STT — OpenAI-compatible /v1/audio/transcriptions proxy
# that routes to upstream providers (Groq Whisper, …) via the model
# id. Reuses Groq's warm_client + encode_wav helpers, so the feature
# pulls `groq` in transitively.
openrouter = ["dep:reqwest", "dep:fono-http", "dep:base64", "groq"]
deepgram = ["dep:reqwest", "dep:fono-http", "dep:tokio-tungstenite"]
# Cartesia STT — batch `POST /stt` against `ink-whisper`. Realtime
# `ink-2` over the turn-based WebSocket lands in a Phase 2 streaming
# slice; see `plans/2026-05-23-cartesia-stt-support-v2.md`. Reuses
# Groq's `warm_client` + `encode_wav` helpers, so the feature pulls
# `groq` in transitively (matches `openrouter`).
cartesia = ["dep:reqwest", "dep:fono-http", "groq"]
# ElevenLabs STT — batch Scribe (`POST /v1/speech-to-text`, multipart
# `model_id` + `file`). Reuses Groq's `warm_client` + `encode_wav`
# helpers, so the feature pulls `groq` in transitively (matches
# `cartesia` / `openrouter`).
elevenlabs = ["dep:reqwest", "dep:fono-http", "groq"]
# Speechmatics STT — native realtime WebSocket client
# (`wss://<region>.rt.speechmatics.com/v2`) driven one-shot for the
# batch `transcribe` path. Pulls `tokio-tungstenite` (the WS client,
# shared with Deepgram streaming) and `futures` (Sink/Stream ext
# traits). No `reqwest` — the realtime socket is the only transport.
speechmatics = ["dep:tokio-tungstenite", "dep:futures"]
# Local whisper — opt-in because it vendors whisper.cpp (C++ build).
whisper-local = ["dep:whisper-rs"]
# Wyoming STT client — talks to wyoming-faster-whisper / fono-server /
# any Rhasspy or Home Assistant speech-to-phrase-style server. Ships
# in default builds (cheap, no native deps).
wyoming = ["dep:fono-net-codec"]
# Live-dictation streaming primitives + per-backend stream_transcribe
# implementations. Plan R1/R3. Off by default until v0.2.0-alpha proves
# the slim build remains slim.
streaming = ["dep:futures", "dep:tokio-stream"]
# Hardware acceleration features — forward to whisper-rs, which then
# forwards to whisper-rs-sys's CMake build. Off by default because
# they require the corresponding SDK / headers at build time. See
# `crates/fono/src/daemon.rs::hardware_acceleration_summary` for the
# matching surfacing logic.
accel-cuda = ["whisper-local", "whisper-rs/cuda", "fono-core/accel-cuda"]
accel-metal = ["whisper-local", "whisper-rs/metal", "fono-core/accel-metal"]
accel-vulkan = ["whisper-local", "whisper-rs/vulkan", "fono-core/accel-vulkan"]
accel-hipblas = ["whisper-local", "whisper-rs/hipblas", "fono-core/accel-hipblas"]
accel-coreml = ["whisper-local", "whisper-rs/coreml", "fono-core/accel-coreml"]
accel-openblas = ["whisper-local", "whisper-rs/openblas"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
fono-http = { path = "../fono-http", optional = true }
# OpenRouter STT requires base64-encoded audio in the JSON request
# body (it doesn't accept multipart/form-data on /v1/audio/transcriptions).
base64 = { version = "0.22", optional = true }
tokio-tungstenite = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
fono-net-codec = { path = "../fono-net-codec", optional = true }

[dev-dependencies]
# Integration tests for the Wyoming client need the codec directly to
# stand up an in-process server stub.
fono-net-codec = { path = "../fono-net-codec" }
serde_json = { workspace = true }
tokio = { workspace = true }
