[package]
name = "fono-tray"
description = "Tray icon and menu integration for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# `ksni` is light (zbus only, no GTK), but it's still optional so a
# library consumer that doesn't want a tray surface (e.g. the
# `fono-server`-style headless invocation, or unit tests) can build
# `fono-tray` as a no-op. Default off; the top-level `fono` binary
# enables `tray-backend` via its own `tray` feature.
default = []
tray-backend = ["dep:ksni"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ksni = { workspace = true, optional = true }
