[package]
name = "fono-tray"
description = "Tray icon and menu integration for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# The tray backend is optional so a library consumer that doesn't want
# a tray surface (e.g. the `fono-server`-style headless invocation, or
# unit tests) can build `fono-tray` as a no-op. Default off; the
# top-level `fono` binary enables `tray-backend` via its own `tray`
# feature. Per platform the feature activates:
#   - Linux: `ksni` (pure-Rust SNI over zbus, no GTK).
#   - macOS: the objc2 NSStatusItem renderer (zero new crates — the
#     objc2 stack is already a darwin edge of the graph via
#     fono-inject / arboard).
#   - Windows: the `tray-icon` Shell_NotifyIcon renderer + a small
#     `windows-sys` Win32 message pump (windows-sys is already in the
#     graph via cpal, so it is net-zero on binary size).
# The `dep:` entries for target-scoped optional dependencies are
# no-ops off-target, so one feature serves every platform.
default = []
tray-backend = [
    "dep:ksni",
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:tray-icon",
    "dep:windows-sys",
]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# NSStatusItem menu-bar renderer (plan Task 7.3). All three crates are
# already in Cargo.lock at these exact versions via fono-inject's
# focus prober / arboard's darwin backend — no new-to-project crates,
# zero Linux cost (target tables do not unify off-target).
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", default-features = false, optional = true, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSBitmapImageRep",
    "NSButton",
    "NSCell",
    "NSControl",
    "NSEvent",
    "NSGraphics",
    "NSGraphicsContext",
    "NSImage",
    "NSImageRep",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
] }
objc2-foundation = { version = "0.3", default-features = false, optional = true, features = [
    "std",
    "NSDate",
    "NSGeometry",
    "NSObjCRuntime",
    "NSString",
    "NSThread",
    "NSTimer",
] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows notification-area renderer (plan Task 6.2). `tray-icon` is
# the only new-to-project crate (MIT/Apache-2.0, already allowlisted in
# deny.toml); it pulls `muda` transitively, which we reach via
# `tray_icon::menu`. Windows-only, so it is zero cost to the shipped
# Linux/macOS binaries (target tables do not unify off-target).
tray-icon = { version = "0.20", optional = true }
# Minimal Win32 message pump for the dedicated tray thread. Already in
# Cargo.lock at 0.59 via cpal / tray-icon, so this direct edge adds no
# new crate and no binary size.
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
