[package]
name = "fono-tts"
description = "Text-to-speech trait and local + cloud backends for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Wyoming TTS client ships in default builds — no native deps, lets users
# point at a wyoming-piper or sibling fono-server without recompiling.
default = ["wyoming"]
# Cloud — each behind a feature flag. The four cloud features below
# share the OpenAI-compatible client in `openai_compat.rs` (OpenAI,
# Groq, OpenRouter) or a thin bespoke client (Cartesia, Deepgram);
# all of them just need `reqwest` and the catalogue. Each provider is
# feature-gated to keep the linker output minimal.
openai = ["dep:reqwest", "dep:fono-http"]
groq = ["dep:reqwest", "dep:fono-http"]
openrouter = ["dep:reqwest", "dep:fono-http"]
cartesia = ["dep:reqwest", "dep:fono-http"]
deepgram = ["dep:reqwest", "dep:fono-http"]
# LAN Wyoming TTS server.
wyoming = ["dep:fono-net-codec"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
fono-http = { path = "../fono-http", optional = true }
fono-net-codec = { path = "../fono-net-codec", optional = true }

[dev-dependencies]
fono-net-codec = { path = "../fono-net-codec" }
serde_json = { workspace = true }
tokio = { workspace = true }
