[package]
name = "fono-tts"
description = "Text-to-speech trait and local + cloud backends for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Wyoming TTS client ships in default builds — no native deps, lets users
# point at a wyoming-piper or sibling fono-server without recompiling.
default = ["wyoming"]
# Cloud — each behind a feature flag. The four cloud features below
# share the OpenAI-compatible client in `openai_compat.rs` (OpenAI,
# Groq, OpenRouter) or a thin bespoke client (Cartesia, Deepgram);
# all of them just need `reqwest` and the catalogue. Each provider is
# feature-gated to keep the linker output minimal.
openai = ["dep:reqwest", "dep:fono-http"]
groq = ["dep:reqwest", "dep:fono-http"]
openrouter = ["dep:reqwest", "dep:fono-http"]
cartesia = ["dep:reqwest", "dep:fono-http"]
deepgram = ["dep:reqwest", "dep:fono-http"]
# ElevenLabs TTS — bespoke `POST /v1/text-to-speech/<voice>` REST
# client, default model Eleven v3. Raw `pcm_24000` output requires a
# paid ElevenLabs plan. Just needs reqwest + the catalogue, like
# Deepgram.
elevenlabs = ["dep:reqwest", "dep:fono-http"]
# Speechmatics TTS (preview) — bespoke `POST /generate/<voice>` REST
# client; English-only during the preview. Just needs reqwest + the
# catalogue, like Deepgram.
speechmatics = ["dep:reqwest", "dep:fono-http"]
# Gemini native TTS — bespoke `:generateContent` with
# `responseModalities: ["AUDIO"]` on a single GEMINI_API_KEY (ADR 0034).
# Returns base64 int16 PCM, so it needs base64 in addition to the shared
# reqwest/fono-http/openai_compat warm-client helpers.
gemini = ["dep:reqwest", "dep:fono-http", "dep:base64"]
# LAN Wyoming TTS server.
wyoming = ["dep:fono-net-codec"]
# Local ONNX voice engine (Piper now; Kokoro/VAD/wake-word later) on the
# statically-linked `ort` runtime. DEFAULT in the `fono` binary as of
# 2026-06-02 (ON in the shipped `cpu`/`gpu` artefacts). Requires a pinned
# `libonnxruntime.a` via `ORT_LIB_LOCATION` at build time (ADR 0032,
# `docs/binary-size.md`).
# Pulls the pure-Rust `espeak-ng` phonemizer. No `bundled-data-*` features:
# the ~102 KiB language-independent G2P core is embedded directly
# (`src/espeak.rs`) and per-language `<lang>_dict` files download from the
# voice mirror at runtime (ADR 0033) — so the binary stays independent of
# how many languages we ship.
tts-local = [
    "dep:ort",
    "dep:espeak-ng",
    "dep:fono-download",
    "dep:whatlang",
]

[dependencies]
fono-core = { path = "../fono-core" }
fono-audio = { path = "../fono-audio" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
fono-http = { path = "../fono-http", optional = true }
base64 = { version = "0.22", optional = true }
fono-net-codec = { path = "../fono-net-codec", optional = true }
ort = { workspace = true, optional = true }
espeak-ng = { workspace = true, optional = true }
fono-download = { path = "../fono-download", optional = true }
whatlang = { workspace = true, optional = true }

[dev-dependencies]
fono-net-codec = { path = "../fono-net-codec" }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
