[package]
name = "fono"
description = "Lightweight native voice-dictation daemon and CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "fono"
path = "src/main.rs"

[features]
# Default release ships a single static binary with both local STT
# (whisper.cpp via whisper-rs) and local LLM cleanup (llama.cpp via
# llama-cpp-2). The duplicate-ggml symbol collision is resolved at
# link time by `-Wl,--allow-multiple-definition` set in
# `.cargo/config.toml`. Slim cloud-only build:
# `cargo build --no-default-features --features tray`.
default = ["tray", "local-models", "llama-local", "interactive", "waveform"]
tray = ["fono-tray/tray-backend"]
local-models = ["fono-stt/whisper-local"]
llama-local = ["fono-llm/llama-local"]
# Hardware acceleration features — fan out to the matching opt-in
# features on `fono-stt` and `fono-llm`, which themselves forward to
# `whisper-rs`/`llama-cpp-2`. Off by default because they require the
# corresponding SDK at build time (CUDA toolkit, Vulkan SDK, etc.);
# devs / packaging matrices opt in. Surfaced at runtime via
# `daemon::hardware_acceleration_summary`.
accel-cuda = ["fono-stt/accel-cuda", "fono-llm/accel-cuda"]
accel-metal = ["fono-stt/accel-metal", "fono-llm/accel-metal"]
accel-vulkan = ["fono-stt/accel-vulkan", "fono-llm/accel-vulkan"]
accel-rocm = ["fono-stt/accel-hipblas", "fono-llm/accel-rocm"]
accel-coreml = ["fono-stt/accel-coreml"]
accel-openblas = ["fono-stt/accel-openblas"]
# Live-dictation streaming pipeline. Plan v6 / Slice A. Flipped into
# the default set in v0.2.2 — the released binary now ships with the
# streaming overlay, `record --live`, and `test-overlay`. Slim
# cloud-only builds (`--no-default-features --features tray,cloud-all`)
# still opt in explicitly.
interactive = [
    "fono-stt/streaming",
    "fono-audio/streaming",
    "fono-overlay/real-window",
    "fono-core/budget",
    "dep:futures",
    "dep:tokio-stream",
]
# Standalone audio-visualisation overlay (bars/oscilloscope/pulse) for
# batch recording, plus the right-side VU bar on the live-dictation
# panel. Both share fono-overlay/real-window with `interactive`; having
# both features enabled simultaneously is safe because only one spawn
# path fires at daemon startup. GUI-only — must be absent from any
# future server feature profile.
waveform = ["fono-overlay/real-window"]
# X11 key injection via enigo (libxdo). Keep opt-in: requires `libxdo`
# at build time, which isn't installed on every Linux desktop. Users
# without `wtype`/`ydotool` on Wayland or `enigo` on X11 still get a
# working dictation thanks to fono-inject's clipboard fallback (see
# `fono_inject::type_text_with_outcome`).
enigo = ["fono-inject/enigo-backend"]
# Cloud meta-feature so a single flag enables all hosted providers.
cloud-all = ["fono-stt/openai", "fono-llm/anthropic"]

[dependencies]
fono-core = { path = "../fono-core", features = ["vulkan-probe"] }
fono-audio = { path = "../fono-audio" }
fono-stt = { path = "../fono-stt" }
fono-llm = { path = "../fono-llm" }
fono-hotkey = { path = "../fono-hotkey" }
fono-inject = { path = "../fono-inject" }
fono-tray = { path = "../fono-tray" }
fono-overlay = { path = "../fono-overlay" }
fono-ipc = { path = "../fono-ipc" }
fono-download = { path = "../fono-download" }
fono-update = { path = "../fono-update" }
# LAN servers (Wyoming today; mDNS + Fono-native land in Slices 4–6).
# Default-on so `fono serve wyoming` works in the standard build; can
# be disabled by slim builds via `default-features = false`.
fono-net = { path = "../fono-net", features = ["discovery"] }
mdns-sd = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
console = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
# Real-input FFT for the `fft` and `heatmap` waveform styles. Small
# (no_std-capable) and cheap; only invoked from the level-ticker task
# when the standalone waveform overlay is active.
realfft = "3"

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
