[package]
name = "fono"
description = "Lightweight native voice-dictation daemon and CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "fono"
path = "src/main.rs"

[features]
# Fono always ships local whisper.cpp STT and llama.cpp polish;
# cloud providers are additive. The default release builds a single
# static binary with both locals enabled. The duplicate-ggml symbol
# collision is resolved at link time by
# `-Wl,--allow-multiple-definition` set in `.cargo/config.toml`.
#
# `tts-local` is also default as of 2026-06-02: the shipped binary does
# local Piper TTS out of the box. This makes EVERY build of `fono`
# (including `cargo test`/`clippy` and all release variants) link the
# statically-pinned `libonnxruntime.a`, so `ORT_LIB_LOCATION` must point
# at it — run `scripts/fetch-onnxruntime.sh` first (CI does this
# automatically; see `.github/workflows/ci.yml` + `release.yml`):
#   export ORT_LIB_LOCATION="$(sh scripts/fetch-onnxruntime.sh)"
default = ["tray", "local-models", "llama-local", "interactive", "tts-local"]
tray = ["fono-tray/tray-backend"]
local-models = ["fono-stt/whisper-local"]
llama-local = ["fono-polish/llama-local", "fono-assistant/llama-local"]
# Hardware acceleration features — fan out to the matching opt-in
# features on `fono-stt` and `fono-polish`, which themselves forward to
# `whisper-rs`/`llama-cpp-2`. Off by default because they require the
# corresponding SDK at build time (CUDA toolkit, Vulkan SDK, etc.);
# devs / packaging matrices opt in. Surfaced at runtime via
# `daemon::hardware_acceleration_summary`.
accel-cuda = ["fono-stt/accel-cuda", "fono-polish/accel-cuda", "fono-assistant/accel-cuda"]
accel-metal = ["fono-stt/accel-metal", "fono-polish/accel-metal", "fono-assistant/accel-metal"]
accel-vulkan = ["fono-stt/accel-vulkan", "fono-polish/accel-vulkan", "fono-assistant/accel-vulkan"]
accel-rocm = ["fono-stt/accel-hipblas", "fono-polish/accel-rocm", "fono-assistant/accel-rocm"]
accel-coreml = ["fono-stt/accel-coreml"]
accel-openblas = ["fono-stt/accel-openblas"]
# Live-dictation streaming pipeline + the audio-visualisation overlay
# (bars/oscilloscope/FFT/heatmap) used during batch recording and on
# the right side of the live panel. Default-on; the released binary
# ships with the streaming overlay, `record --live`, and
# `test-overlay`.
interactive = [
    "fono-stt/streaming",
    "fono-audio/streaming",
    "fono-overlay/real-window",
    "fono-core/budget",
    "dep:tokio-stream",
]
# X11 key injection via enigo (libxdo). Keep opt-in: requires `libxdo`
# at build time, which isn't installed on every Linux desktop. Users
# without `wtype`/`ydotool` on Wayland or `enigo` on X11 still get a
# working dictation thanks to fono-inject's clipboard fallback (see
# `fono_inject::type_text_with_outcome`).
enigo = ["fono-inject/enigo-backend"]
# Local ONNX voice stack (Piper TTS now; Kokoro/VAD/wake-word/streaming-STT
# later) on the statically-linked `ort` runtime. DEFAULT as of 2026-06-02
# (ADR 0032, `docs/binary-size.md`): the shipped `cpu`/`gpu` artefacts do
# local TTS out of the box. Building (any profile) requires `ORT_LIB_LOCATION`
# to point at the pinned `libonnxruntime.a` — `scripts/fetch-onnxruntime.sh`
# provides it.
tts-local = ["fono-tts/tts-local"]

[dependencies]
fono-core = { path = "../fono-core", features = ["vulkan-probe"] }
fono-audio = { path = "../fono-audio" }
fono-http = { path = "../fono-http" }
fono-stt = { path = "../fono-stt", features = ["groq", "openai", "openrouter", "deepgram", "cartesia", "wyoming"] }
# Default builds ship every cloud backend wired in the catalogue —
# fono-stt: Groq/OpenAI/Deepgram (+ Wyoming LAN); fono-polish:
# Cerebras/OpenAI-compat/Anthropic; fono-tts: all five hosted
# providers (+ Wyoming LAN). This means `fono use <stt|polish|tts>
# <provider>` and the wizard's primary picker work out of the box for
# every catalogued provider without recompiling. Each feature only
# adds an HTTP client (reqwest is already pulled in transitively); no
# native deps.
fono-tts = { path = "../fono-tts", features = ["wyoming", "openai", "groq", "openrouter", "cartesia", "deepgram"] }
fono-polish = { path = "../fono-polish", features = ["cerebras", "openai-compat", "anthropic"] }
fono-assistant = { path = "../fono-assistant" }
fono-hotkey = { path = "../fono-hotkey" }
fono-inject = { path = "../fono-inject" }
fono-tray = { path = "../fono-tray" }
fono-overlay = { path = "../fono-overlay" }
fono-ipc = { path = "../fono-ipc" }
fono-download = { path = "../fono-download" }
fono-update = { path = "../fono-update" }
# LAN servers (Wyoming today; mDNS + Fono-native land in Slices 4–6).
# Default-on so `fono serve wyoming` works in the standard build.
fono-net = { path = "../fono-net", features = ["discovery"] }
fono-mcp-server = { path = "../fono-mcp-server" }
mdns-sd = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
console = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true, optional = true }
# Real-input FFT for the `fft` and `heatmap` waveform styles. Small
# (no_std-capable) and cheap; only invoked from the level-ticker task
# when the standalone waveform overlay is active.
realfft = "3"
# Used by the desktop installer to dlopen-probe `libxkbcommon-x11.so.0`
# before offering to install it via the host package manager. Already
# in the dep graph via fono-overlay.
libloading = "0.8"

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
